testdata/golden/sema/valid/ret_block_expected_array.fmt
fn main() -> int[] {
    let xs: int[] = { ret []; };
    return xs;
}
